# glance

./: .gitignore  README.md  build.env.example  build.sh  project.yml
.github/workflows/: build.yml
Glance/App/: AppDelegate.swift  Info.plist  MenuStrings.swift  UpdateChecker.swift
Glance/Layout/: ThumbnailLayoutEngine.swift
Glance/Onboarding/: OnboardingController.swift
Glance/Overlay/: OverlayWindowController.swift  TabStripView.swift  ThumbnailView.swift  ThumbnailWindow.swift  WorkAreaWindow.swift
Glance/Settings/: GeneralSettingsViewController.swift  LaunchAtLogin.swift  ReservationStore.swift  Settings.swift  SettingsWindowController.swift  ShortcutSettingsViewController.swift  WindowSettingsViewController.swift  WorkAreaTabStore.swift
Glance/WindowCapture/: WindowCaptureManager.swift  WindowInfo.swift
Glance/WindowManagement/: AccessibilityManager.swift  VirtualDisplayManager.swift  WindowTracker.swift
HackerScreen/App/: AppDelegate.swift  Info.plist
HackerScreen/Layout/: ThumbnailLayoutEngine.swift
HackerScreen/Overlay/: OverlayWindowController.swift  ThumbnailView.swift  ThumbnailWindow.swift
HackerScreen/WindowCapture/: WindowCaptureManager.swift  WindowInfo.swift
HackerScreen/WindowManagement/: WindowTracker.swift  (+2 more)
glance-windows/: Cargo.toml  build.bat  build.rs
glance-windows/installer/: Package.wxs
glance-windows/src/: app.rs  config.rs  input.rs  layout.rs  main.rs  monitor.rs  overlay.rs  strings.rs  swap_resize.rs  thumbnail_manager.rs  tray.rs  types.rs  virtual_desktop.rs  window_manager.rs  window_tracker.rs  work_area.rs
(+2 files in other folders)
