[package]
name = "glance-windows"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
]

[dependencies]
windows-core = "0.58"
log = "0.4"
env_logger = "0.11"
